--- a/style.css
+++ b/style.css
@@ -101,12 +101,11 @@ section.education {
   padding: 2.5rem 0 3rem;
 }
 
+section.education p {
+  margin: 1rem 0 0 2.5rem;
+}
 
-span.right-alignment {
-  /* aligns dates and and extra information  */
-
-  /* position:absolute;
-  right: 2rem; */
-
+section.education p span.right-alignment {
+  margin: 0 1rem 0 0;
   float:right;
 }
