--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@ section.education p span.right-alignment {
 .work-1 p:first-child,
 .work-2 p:first-child {
   font-weight: 600;
+  margin: 1rem 0 0 2.5rem;
+
 }
 
 
@@ -164,10 +166,6 @@ section.education p span.right-alignment {
   font-style: italic;
 }
 
-.work-1-info > p,
-.work-2-info > p{
-  margin: 1rem 0 0 2.5rem;
-}
 
 .work-1-info,
 .work-2-info {
@@ -175,13 +173,14 @@ section.education p span.right-alignment {
 }
 .work-1-info-extra,
 .work-2-info-extra {
+  margin-right: 4.5rem;
   float:right;
-  margin-right: -2.6rem;
+
 }
 
 .work-1-info-extra > p,
 .work-2-info-extra > p {
-  margin-top: 1rem
+  margin: 1rem 0 0 2.5rem;
 }
 
 section.experience {
@@ -196,6 +195,10 @@ section.experience {
 .work-2-tasks {
   margin-top: 1rem;
   margin-left:5rem;
+}
+
+.job-title {
+  margin: 1rem 0 0 2.5rem;
 }
 
 .work-desc .desc {
